--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/suncalc": "^1.9.2",
     "angular-cli-ghpages": "^3.0.2",
     "jsdom": "^27.1.0",
+    "node-fetch": "^3.3.2",
     "typescript": "~5.9.2",
     "vitest": "^4.0.8"
   }
