--- a/.github/workflows/daily-notification.yml
+++ b/.github/workflows/daily-notification.yml
@@ -25,4 +25,4 @@ jobs:
         env:
           ONESIGNAL_APP_ID: ${{ secrets.ONESIGNAL_APP_ID }}
           ONESIGNAL_API_KEY: ${{ secrets.ONESIGNAL_API_KEY }}
-        run: node scripts/send-daily-notification.mjs
+        run: npx tsx scripts/send-daily-notification.ts
