--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "angular-cli-ghpages": "^3.0.2",
     "jsdom": "^27.1.0",
     "node-fetch": "^3.3.2",
+    "tsx": "^4.21.0",
     "typescript": "~5.9.2",
     "vitest": "^4.0.8"
   }
